Initial create done - working as expected

--- a/cs-mssql-tipsy-crafter-host/appsettings.Development.json
+++ b/cs-mssql-tipsy-crafter-host/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AmritaTipsyDb": "Server=localhost;Database=amrita-tipsy;User Id=sa;Password=M0h1ni-@vtaR;Encrypt=false"
   }
 }
