--- a/cs-mssql-tipsy-crafter-host/cs-mssql-tipsy-crafter-host.csproj
+++ b/cs-mssql-tipsy-crafter-host/cs-mssql-tipsy-crafter-host.csproj
@@ -11,4 +11,12 @@
       <ProjectReference Include="..\cs-mssql-tipsy-crafter-infrastructure\cs-mssql-tipsy-crafter-infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
