--- a/cs-mssql-tipsy-crafter-infrastructure/cs-mssql-tipsy-crafter-infrastructure.csproj
+++ b/cs-mssql-tipsy-crafter-infrastructure/cs-mssql-tipsy-crafter-infrastructure.csproj
@@ -11,4 +11,10 @@
       <ProjectReference Include="..\cs-mssql-tipsy-crafter-domain\cs-mssql-tipsy-crafter-domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="7.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    </ItemGroup>
+
 </Project>
